language_tests/source_files/valid/closure_byref.tr
// Capture non-Copy values by reference.
func main() {
    var list = List[int32]()
    list.append(1)
    list.append(2)

    let get_len = || -> int32 { list.len() as int32 }
    std.assert(get_len() == 2, "list length should be 2")

    std.print("closure_byref: PASSED\n")
}
